attempting to fix column width

--- a/benInventions.html
+++ b/benInventions.html
@@ -23,9 +23,9 @@
 
 <BODY>
 	
-	<table style="width:100%">
+	<table>
+	<col>
 	  <tr>
-
 	    <th>Invention</th>
 	    <th>Date</th> 
 	    <th>Description</th>
@@ -37,7 +37,7 @@
 	    <td>1749</td>
 	    <td></td>
 	    <td>
-	    <div id = "buttons">
+	    <div id = "citebutton">
 	    	<a href="https://www.fi.edu/benjamin-franklin/inventions" class = "button">Link to Website</a>
 	    </div>
 	    </td> 
@@ -48,7 +48,7 @@
 	    <td>1784</td>
 	    <td>94</td>
 	    <td>
-	    <div id = "buttons">
+	    <div id = "citebutton">
 	    	<a href="https://www.fi.edu/benjamin-franklin/inventions" class = "button">Link to Website</a>
 	    </div>
 	    </td> 
@@ -59,7 +59,8 @@
 	    <td>1717</td>
 	    <td></td>
 	    <td>
-	    <div id = "buttons">
+
+	    <div id = "citebutton">
 	    	<a href="https://www.fi.edu/benjamin-franklin/inventions" class = "button">Link to Website</a>
 	    </div>
 	    </td> 
